--- a/notebooks/weather/load open meteo.ipynb
+++ b/notebooks/weather/load open meteo.ipynb
@@ -21,11 +21,10 @@
     "# download data\n",
     "data = {}\n",
     "\n",
-    "# https://api.open-meteo.com/v1/forecast?latitude=47.712596&longitude=13.618029&hourly=temperature_2m,cloud_cover,rain,snowfall,snow_depth,cloud_cover_low,cloud_cover_mid,cloud_cover_high,visibility,relative_humidity_2m,dew_point_2m&timezone=Europe%2FBerlin&past_days=7\n",
     "\n",
     "# returns JSON\n",
     "\n",
-    "url = \"https://api.open-meteo.com/v1/forecast?latitude=47.712596&longitude=13.618029&hourly=temperature_2m,cloud_cover,rain,snowfall,snow_depth,cloud_cover_low,cloud_cover_mid,cloud_cover_high,visibility,relative_humidity_2m,dew_point_2m&timezone=Europe%2FBerlin&past_days=7\"\n",
+    "url = \"https://api.open-meteo.com/v1/forecast?latitude=47.712596&longitude=13.618029&hourly=temperature_2m,cloud_cover,rain,snowfall,snow_depth,cloud_cover_low,cloud_cover_mid,cloud_cover_high,visibility,relative_humidity_2m,dew_point_2m&timezone=Europe%2FBerlin&forecast_days=14\"\n",
     "response = requests.get(url)\n",
     "\n",
     "if response.status_code == 200:\n",
@@ -104,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df.describe()"
    ]
   },
   {
@@ -113,64 +112,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg\n",
-    "import os\n",
-    "import csv\n",
+    "from psycopg import connect\n",
+    "from psycopg.rows import dict_row\n",
+    "from psycopg import sql\n",
     "\n",
-    "csv_file_path = \"/home/martin/Downloads/open-meteo-47.70N13.51E474m(1).csv\"\n",
     "\n",
     "\n",
     "os.environ['PGSERVICEFILE'] = \"/home/martin/Workspace/Energiegemeinschaft/notebooks/.pg_service.conf\"\n",
     "os.environ['PGPASSFILE'] = \"/home/martin/Workspace/Energiegemeinschaft/notebooks/.pgpass\"\n",
     "\n",
+    "data_tuples = [\n",
+    "    (\n",
+    "        row['time'],\n",
+    "        row['temperature_2m'],\n",
+    "        row['cloud_cover'],\n",
+    "        row['rain'],\n",
+    "        row['snowfall'],\n",
+    "        row['snow_depth'],\n",
+    "        row['cloud_cover_low'],\n",
+    "        row['cloud_cover_mid'],\n",
+    "        row['cloud_cover_high'],\n",
+    "        row['visibility'],\n",
+    "        row['relative_humidity_2m'],\n",
+    "        row['dew_point_2m'],\n",
+    "    )\n",
+    "    for _, row in df.iterrows()\n",
+    "]\n",
+    "\n",
     "with psycopg.connect(service='eeg-middleware') as conn:\n",
     "    with conn.cursor() as cur:\n",
     "        \n",
-    "        with open(csv_file_path, mode=\"r\", newline=\"\", encoding=\"utf-8\") as csvfile:\n",
-    "            reader = csv.DictReader(csvfile)  # Reads header and returns each row as a dictionary\n",
-    "\n",
-    "            for row in reader:\n",
-    "                print(row)  # You can also access individual columns like row[\"temperature_2m (°C)\"]\n",
-    "            \n",
-    "                insert_sql = \"\"\"\n",
-    "                    INSERT INTO weather_historicweatherdata (\n",
-    "                        timestamp,\n",
-    "                        temperature_2m,\n",
-    "                        cloud_cover,\n",
-    "                        direct_radiation,\n",
-    "                        rain,\n",
-    "                        snowfall,\n",
-    "                        cloud_cover_low,\n",
-    "                        cloud_cover_mid,\n",
-    "                        cloud_cover_high\n",
-    "                    )\n",
-    "                    VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
-    "                    ON CONFLICT (timestamp) DO NOTHING;\n",
-    "                \"\"\"\n",
-    "\n",
-    "                data = (\n",
-    "                    row['time'],  # timestamp\n",
-    "                    row['temperature_2m (°C)'],\n",
-    "                    row['cloud_cover (%)'],\n",
-    "                    row['direct_radiation (W/m²)'],\n",
-    "                    row['rain (mm)'],\n",
-    "                    row['snowfall (cm)'],\n",
-    "                    row['cloud_cover_low (%)'],\n",
-    "                    row['cloud_cover_mid (%)'],\n",
-    "                    row['cloud_cover_high (%)'],\n",
-    "                )\n",
-    "\n",
-    "                cur.execute(insert_sql, data)\n",
-    "                \n",
-    "            # for\n",
-    "        # open\n",
-    "            \n",
-    "        c = conn.commit()\n",
-    "        #print(c)\n",
+    "        cur.executemany(\n",
+    "            \"\"\"\n",
+    "            INSERT INTO weather_weatherdata (\n",
+    "                time, temperature_2m, cloud_cover, rain, snowfall, snow_depth,\n",
+    "                cloud_cover_low, cloud_cover_mid, cloud_cover_high,\n",
+    "                visibility, relative_humidity_2m, dew_point_2m\n",
+    "            ) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
+    "            ON CONFLICT (time) DO UPDATE SET\n",
+    "                temperature_2m = EXCLUDED.temperature_2m,\n",
+    "                cloud_cover = EXCLUDED.cloud_cover,\n",
+    "                rain = EXCLUDED.rain,\n",
+    "                snowfall = EXCLUDED.snowfall,\n",
+    "                snow_depth = EXCLUDED.snow_depth,\n",
+    "                cloud_cover_low = EXCLUDED.cloud_cover_low,\n",
+    "                cloud_cover_mid = EXCLUDED.cloud_cover_mid,\n",
+    "                cloud_cover_high = EXCLUDED.cloud_cover_high,\n",
+    "                visibility = EXCLUDED.visibility,\n",
+    "                relative_humidity_2m = EXCLUDED.relative_humidity_2m,\n",
+    "                dew_point_2m = EXCLUDED.dew_point_2m\n",
+    "            \"\"\",\n",
+    "            data_tuples\n",
+    "        )\n",
     "        print(\"Data inserted successfully.\")\n",
     "        \n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
