upgrade finance to svelte 5

--- a/notebooks/finance/Abrechnung.ipynb
+++ b/notebooks/finance/Abrechnung.ipynb
@@ -29,8 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QUARTAL = \"Abr_YQ-2025-1\"\n",
-    "IMPORT_FILE = \"./EEG-Faktura Import/abrechnung_Abr_YQ-2025-1_export.xlsx\""
+    "QUARTAL = \"Abr_YQ-2025-2\"\n",
+    "IMPORT_FILE = \"./EEG-Faktura Import/abrechnung_Abr_YQ-2025-2_export.xlsx\"\n",
+    "#IMPORT_FILE=\"/home/martin/Downloads/RC101533_abrechnung_Abr_YQ-2025-2_export (2).xlsx\""
    ]
   },
   {
@@ -239,6 +240,13 @@
     "    \n",
     "print(xml_file)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -257,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
