--- a/notebooks/energyData/EEG Faktura Energy Report.ipynb
+++ b/notebooks/energyData/EEG Faktura Energy Report.ipynb
@@ -25,10 +25,23 @@
     "CONSUMPTION = \"CONSUMPTION\"\n",
     "GENERATION = \"GENERATION\"\n",
     "\n",
+    "# get the latest file from Downloads folder\n",
     "\n",
-    "FILE_NAME = \"/home/martin/Downloads/RC101533-Energy-Report-20250601_20250709.xlsx\"\n",
+    "import glob\n",
+    "import os\n",
     "\n",
-    "#"
+    "# Pattern for matching files\n",
+    "pattern = os.path.expanduser(\"~/Downloads/RC101533-Energy-Report-*.xlsx\")\n",
+    "\n",
+    "# Find all matching files\n",
+    "files = glob.glob(pattern)\n",
+    "\n",
+    "if not files:\n",
+    "    print(\"No matching files found.\")\n",
+    "else:\n",
+    "    # Get the latest file by modification time\n",
+    "    FILE_NAME = max(files, key=os.path.getmtime)\n",
+    "    print(\"Latest file:\", FILE_NAME)"
    ]
   },
   {
@@ -356,6 +369,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check for holes in timeline of each measurement\n",
+    "\n",
+    "#first timestamp\n",
+    "first_timestamp = energy_data.timestamps[0]\n",
+    "# last timestamp\n",
+    "last_timestamp = energy_data.timestamps[-1]\n",
+    "\n",
+    "# iterate energy_data.meter_points\n",
+    "for key in energy_data.meter_points:\n",
+    "    meter_point = energy_data.meter_points[key]\n",
+    "    for measurement in meter_point.measurements:\n",
+    "        \n",
+    "        # iterate timestamps and check if measurement.data is complete\n",
+    "        for timestamp in [ n for n in energy_data.timestamps if n >= measurement.period_start and n <= measurement.period_end ]:\n",
+    "\n",
+    "            if timestamp not in measurement.data_map:\n",
+    "                print(f\"\\t{measurement.period_start} {measurement.period_end}\")\n",
+    "                print(f\"{meter_point.to_string()}: Missing data at {timestamp} for {measurement.to_string()}\")\n",
+    "            else:\n",
+    "                #print(f\"\\t\\t{timestamp} {measurement.data_map[timestamp]}\")\n",
+    "                pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_data.print_metrics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(energy_data.timestamps)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "\n",
+    "energy_data = EnergyData(FILE_NAME)\n",
+    "\n",
+    "total = 0.0\n",
+    "\n",
+    "for i in range(len(energy_data.timestamps) - 2):\n",
+    "    energy_data = EnergyData(FILE_NAME)\n",
+    "    t = energy_data.timestamps[i]\n",
+    "    energy_data.timestamps = energy_data.timestamps[i:i+1]\n",
+    "\n",
+    "\n",
+    "    result = energy_data.sum_measurements_by_metric({'energy_direction': 'GENERATION', 'meter_code': 'Gesamte gemeinschaftliche Erzeugung [KWH]'})\n",
+    "    erzeugung = sum(d[\"value\"] for d in result.data_list)\n",
+    "    erzeugung\n",
+    "    print(\"Gesamte Erzeugung:\", erzeugung)\n",
+    "\n",
+    "\n",
+    "    result = energy_data.sum_measurements_by_metric({'energy_direction': 'CONSUMPTION', 'meter_code': 'Eigendeckung gemeinschaftliche Erzeugung [KWH]'})\n",
+    "    eigendeckung = sum(d[\"value\"] for d in result.data_list)\n",
+    "    eigendeckung\n",
+    "    print(\"Eigendeckung:\", eigendeckung)\n",
+    "\n",
+    "\n",
+    "    result = energy_data.sum_measurements_by_metric({'energy_direction': 'GENERATION', 'meter_code': 'Gesamt/Überschusserzeugung, Gemeinschaftsüberschuss [KWH]'})\n",
+    "    restueberschuss = sum(d[\"value\"] for d in result.data_list)\n",
+    "    restueberschuss\n",
+    "    print(\"Restüberschuss:\", restueberschuss)\n",
+    "\n",
+    "    # sollte 0.0 sein\n",
+    "    differenz = erzeugung - eigendeckung - restueberschuss\n",
+    "    total = total + differenz\n",
+    "    print(t, i, differenz)\n",
+    "    if differenz > 0.1:\n",
+    "        print(\"ALERT!!\")\n",
+    "        print(\"check\", t)\n",
+    "        print(\"\")\n",
+    "    print(\"\")\n",
+    "\n",
+    "\n",
+    "print(\"Total:\", total)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -508,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
