--- a/notebooks/energyData/Check Data.ipynb
+++ b/notebooks/energyData/Check Data.ipynb
@@ -3,26 +3,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "391e3f6d",
+   "id": "e9bb58b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install openpyxl pandas\n"
+    "CONSUMPTION = \"CONSUMPTION\"\n",
+    "GENERATION = \"GENERATION\"\n",
+    "\n",
+    "# get the latest file from Downloads folder\n",
+    "\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "# Pattern for matching files\n",
+    "pattern = os.path.expanduser(\"~/Downloads/RC101533-Energy-Report-*.xlsx\")\n",
+    "\n",
+    "# Find all matching files\n",
+    "files = glob.glob(pattern)\n",
+    "\n",
+    "if not files:\n",
+    "    print(\"No matching files found.\")\n",
+    "else:\n",
+    "    # Get the latest file by modification time\n",
+    "    FILE_NAME = max(files, key=os.path.getmtime)\n",
+    "    print(\"Latest file:\", FILE_NAME)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9bb58b9",
+   "id": "47007d2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILENAME=\"~/Downloads/RC101533-Energy-Report-20250401_20250630 (2).xlsx\"\n",
+    "# load xlsx file\n",
+    "from openpyxl import load_workbook\n",
     "\n",
-    "start_date = '2025-04-01'\n",
-    "end_date = '2025-07-01'\n",
+    "workbook = load_workbook(filename=FILE_NAME)\n",
     "\n",
-    "import pandas as pd\n",
+    "print(\"Sheet names:\", workbook.sheetnames)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6913a1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n"
    ]
   }
@@ -43,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
