--- a/notebooks/finance/Abrechnung.ipynb
+++ b/notebooks/finance/Abrechnung.ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QUARTAL = \"Abr_YQ-2025-2\"\n",
-    "IMPORT_FILE = \"./EEG-Faktura Import/abrechnung_Abr_YQ-2025-2_export.xlsx\"\n",
+    "QUARTAL = \"Abr_YQ-2025-3\"\n",
+    "IMPORT_FILE = \"./EEG-Faktura Import/abrechnung_Abr_YQ-2025-3_export_Gutschriften_bis_Teil1.xlsx\"\n",
     "#IMPORT_FILE=\"/home/martin/Downloads/RC101533_abrechnung_Abr_YQ-2025-2_export (2).xlsx\""
    ]
   },
@@ -101,6 +101,15 @@
     "sum / 2\n",
     "    \n",
     "# soll den wert des Umsatzes ausgeben"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum"
    ]
   },
   {
@@ -265,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
